fixed horizontal scroll bar showing on landing page

--- a/public/assets/css/landing.css
+++ b/public/assets/css/landing.css
@@ -7,6 +7,10 @@
 /*-----------------*/
 
 /*GENERAL*/
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
 
 body {
   background-color: #ffda21;
